as a user i must be avable see transaction history [Delivers #175574650]
